Fixed layout breaking with Museo Sans just before switching to mobile

--- a/src/static/less/site.less
+++ b/src/static/less/site.less
@@ -463,8 +463,8 @@ ul.list-link li a {
 /* MEDIUM ONLY */
 @media only screen and (min-width: 40.063em) and (max-width: 64em) {
   .top-bar > .top-bar-section li a {
-    padding-right: 7px !important;
-    padding-left: 7px !important;
+    padding-right: 4px !important;
+    padding-left: 4px !important;
   }
 }
 
